[package]
name = "prometheus-reqwest-remote-write"
version = "0.2.1"
edition = "2021"
authors = ["Christopher Kolstad <chriswk@getunleash.io>"]
description = "A prometheus remote write client for reqwest"
license = "MIT"
repository = "https://github.com/chriswk/prometheus_reqwest_remote_write"
homepage = "https://github.com/chriswk/prometheus_request_remote_write"

[dependencies]
prometheus = { version = "0.13", optional = true }
prost = "0.13"
reqwest = { version = "^0.12", default-features = false }
snap = "1"
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1.4.1"

[features]
default = ["prometheus"]
prometheus = ["dep:prometheus"]
