[package]
name = "prometheus-reqwest-remote-write"
version = "0.3.0"
edition = "2021"
authors = ["Christopher Kolstad <chriswk@getunleash.io>"]
description = "A prometheus remote write client for reqwest"
license = "MIT"
repository = "https://github.com/chriswk/prometheus_reqwest_remote_write"
homepage = "https://github.com/chriswk/prometheus_request_remote_write"

[dependencies]
prometheus = "0.14.0"
prost = "0.13.5"
reqwest = { version = "0.12.19", default-features = false, features = [
    "json",
    "rustls-tls",
] }
snap = "1.1.1"
tracing = "0.1.41"

[dev-dependencies]
pretty_assertions = "1.4.1"
