[package]
name = "prometheus-reqwest-remote-write"
version = "0.4.0"
edition = "2021"
authors = ["Christopher Kolstad <chriswk@getunleash.io>"]
description = "A prometheus remote write client for reqwest"
license = "MIT"
repository = "https://github.com/chriswk/prometheus_reqwest_remote_write"
homepage = "https://github.com/chriswk/prometheus_request_remote_write"

[dependencies]
prometheus = { version = "0.14.0" }
prost = { version = "0.14.3" }
reqwest = { version = "0.13.1", default-features = false, features = [
    "json",
    "rustls",
] }
snap = { version = "1.1.1" }

[dev-dependencies]
pretty_assertions = "1.4.1"
